--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: myfatoorah_pay
 description: A new Flutter project.
-version: 0.0.1
-homepage:
+version: 1.0.0
+homepage: https://github.com/mohmmedHossam/myfatoorah_pay.git
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
