--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: myfatoorah_pay
-description: A new Flutter project.
+description: implement MyFatoorah Sdk for android & ios.
 version: 1.0.0
 homepage: https://github.com/mohmmedHossam/myfatoorah_pay.git
 
