--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: myfatoorah_pay
-description: implement MyFatoorah Sdk for android & ios devoloped By SMZ team adding redirect automaticly with payment respose=>(PaymenStatus , PaymentId , Url) success or failed case when back you can controll what will show to user when success or failed paid .
-version: 1.0.1
+description: implement MyFatoorah Sdk for android & ios devoloped By SMZ team adding redirect automaticly with payment respose=>(PaymenStatus , PaymentId , Url) .
+version: 1.0.2
 homepage: https://github.com/mohmmedHossam/myfatoorah_pay.git
 
 environment:
